--- a/_includes/team.html
+++ b/_includes/team.html
@@ -9,7 +9,8 @@
   </div>
   <div class="row">
   {% for person in site.data.sitetext.team.people %}
-	<div class="col-sm-4">
+	<!-- <div class="col-sm-4"> -->
+    <div class="col-lg-8 col-lg-offset-2 text-center">
 	  <div class="team-member">
 		<img class="mx-auto rounded-circle" src="{{ person.image }}" alt="">
 		<h4>{{ person.name }}</h4>
