--- a/_includes/team.html
+++ b/_includes/team.html
@@ -10,9 +10,11 @@
   <div class="row">
   {% for person in site.data.sitetext.team.people %}
 	<!-- <div class="col-sm-4"> -->
-    <div class="col-lg-8 col-lg-offset-2 text-center">
+    <!-- <div class="col-lg-8 col-lg-offset-2 text-center"> -->
+    <div class="col-lg-8 text-center">
 	  <div class="team-member">
-		<img class="mx-auto rounded-circle" src="{{ person.image }}" alt="">
+		<!-- <img class="mx-auto rounded-circle" src="{{ person.image }}" alt=""> -->
+		<img class="img-responsive img-circle" src="{{ person.image }}" alt="">
 		<h4>{{ person.name }}</h4>
 		<p class="text-muted">{{ person.role }}</p>
 		<ul class="list-inline social-buttons">
