trying to do this dumb centering

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -10,8 +10,8 @@
   <div class="row">
   {% for person in site.data.sitetext.team.people %}
 	<!-- <div class="col-sm-4"> -->
-    <!-- <div class="col-lg-8 col-lg-offset-2 text-center"> -->
-    <div class="col-lg-8 text-center">
+    <div class="col-lg-8 col-lg-offset-2 text-center">
+    <!-- <div class="col-lg-8 text-center"> -->
 	  <div class="team-member">
 		<!-- <img class="mx-auto rounded-circle" src="{{ person.image }}" alt=""> -->
 		<img class="img-responsive img-circle" src="{{ person.image }}" alt="">
