--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -5,6 +5,7 @@
   img {
     //width: 225px;
     //height: 225px;
+    text-align: center;
     border: 7px solid fade-out($black, 0.9);
   }
   h4 {
