--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -5,7 +5,8 @@
   img {
     //width: 225px;
     //height: 225px;
-    text-align: center;
+    //text-align: center;
+    margin: auto;
     border: 7px solid fade-out($black, 0.9);
   }
   h4 {
