--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -6,8 +6,9 @@
     //width: 225px;
     //height: 225px;
     //text-align: center;
-    margin: auto;
     border: 7px solid fade-out($black, 0.9);
+    max-width: 100%;
+    height: auto;
   }
   h4 {
     margin-top: 25px;
