--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -7,8 +7,11 @@
     //height: 225px;
     //text-align: center;
     border: 7px solid fade-out($black, 0.9);
-    max-width: 100%;
+    max-width: 99%;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
   }
   h4 {
     margin-top: 25px;
