--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -3,15 +3,18 @@
   margin-bottom: 50px;
   text-align: center;
   img {
+    display: block;
+    position: absolute;
+    left: 50%
+    bottom: 50%
     //width: 225px;
     //height: 225px;
     //text-align: center;
     border: 7px solid fade-out($black, 0.9);
     max-width: 99%;
     height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+    //margin-left: auto;
+    //margin-right: auto;
   }
   h4 {
     margin-top: 25px;
