--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -5,8 +5,8 @@
   img {
     display: block;
     position: absolute;
-    left: 0px
-    bottom: 0px
+    left: 0px;
+    bottom: 0px;
     -ms-transform:translate(50%); /* IE 9 */
 	-ms-transform-origin: 0 0;
     -moz-transform:translate(50%); /* Firefox */
