--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -3,21 +3,21 @@
   margin-bottom: 50px;
   text-align: center;
   img {
-    display: block;
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    -ms-transform:translate(50%); /* IE 9 */
-	-ms-transform-origin: 0 0;
-    -moz-transform:translate(50%); /* Firefox */
-	-moz-transform-origin: 0 0;
-    -webkit-transform:translate(50%); /* Safari and Chrome */
-    -webkit-transform-origin:0 0;
-    -o-transform:translate(50%); /* Opera */
-	-o-transform-origin: 0 0;
+    //text-align: center;
+    //display: block;
+    //position: absolute;
+    //left: 0px;
+    //bottom: 0px;
+    //-ms-transform:translate(50%); /* IE 9 */
+	//-ms-transform-origin: 0 0;
+    //-moz-transform:translate(50%); /* Firefox */
+	//-moz-transform-origin: 0 0;
+    //-webkit-transform:translate(50%); /* Safari and Chrome */
+    //-webkit-transform-origin:0 0;
+    //-o-transform:translate(50%); /* Opera */
+	//-o-transform-origin: 0 0;
     //width: 225px;
     //height: 225px;
-    //text-align: center;
     border: 7px solid fade-out($black, 0.9);
     max-width: 99%;
     height: auto;
